attempt shell mount

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -25,6 +25,8 @@
 - hosts: nfs-client
   tasks:
     - block:
+      - name: try mounting one
+        shell: "mount.nfs test01.lxc:/var/log /mnt/logs -t nfs -o ro -v"
       - name: configured filesystem mounts
         shell: cat /etc/fstab
       - name: NFS client logs, maybe
