--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,13 @@
 - include: validate_variables.yml
 - include: "install_packages_{{ ansible_pkg_mgr }}.yml"
 
+
+- name: Start/Enable the rpcbind service
+  service:
+    name: rpcbind
+    state: started
+    enabled: yes
+
 - import_tasks: server.yml
   when: nfs_exports
 
