--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories: [ '$HOME/lxc' ]
   pip: true
 env:
-- LXC_DISTRO=debian LXC_RELEASE=jessie
+#- LXC_DISTRO=debian LXC_RELEASE=jessie
 - LXC_DISTRO=debian LXC_RELEASE=stretch
 - LXC_DISTRO=ubuntu LXC_RELEASE=xenial
 - LXC_DISTRO=centos LXC_RELEASE=7
