--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,11 +2,11 @@ galaxy_info:
   author: Musee Ullah
   description: NFS sucks
   license: MIT
-  min_ansible_version: 2.0
+  min_ansible_version: 2.3
   platforms:
     - name: Debian
       versions:
-        - jessie
+        #- jessie
         - stretch
     - name: Ubuntu
       versions:
