--- a/tasks/install_packages_yum.yml
+++ b/tasks/install_packages_yum.yml
@@ -1,8 +1,6 @@
 ---
 - name: Install required packages for NFS
   yum:
-    name: "{{ item }}"
-    state: latest
+    name: nfs-utils
+    state: present
     update_cache: yes
-  with_items:
-    - nfs-utils
