--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,22 +2,21 @@ galaxy_info:
   author: Musee Ullah
   description: NFS sucks
   license: MIT
-  min_ansible_version: 2.3
+  min_ansible_version: 2.5
   platforms:
     - name: Debian
       versions:
-        #- jessie
         - stretch
     - name: Ubuntu
       versions:
         - xenial
+        - bionic
     - name: EL
       versions:
         - 7
     - name: Fedora
       versions:
-        - 26
-        - 27
+        - all
   galaxy_tags:
     - nfs
 
